Updated controllers, UI components, and added new frontend assets

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -10,4 +10,33 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+} */
+
+
+
+.card:hover{
+  box-shadow: 0 10px 10px 10px rgba(0,0,0,0.4);
+  cursor: pointer;
+  transition: transform .1s; 
+  transform: scale(1.0); 
+
+}
+#er{
+  display: flex;
+  flex-direction: column;
+  height: 675px;
+  align-items: center;
+  justify-content: center;
+}
+.carousel-wrapper {
+  width: 100%;
+  max-width: 100vw;
+  overflow: hidden;
+}
+
+.carousel-image {
+  width: 100%;
+  height: 500px; /* Adjust as needed */
+  object-fit: cover;
+  display: block;
 }
